# sibela-project

./: CMakeLists.txt  README.md  configure.sh
components/: header.h
data/: initDb.h  murid.h  staf.c  staf.h
libs/: utils.c  utils.h
model/: model.c  model.h
types/: dbTypes.h
update/: update.h
views/: drawView.c  drawView.h  homeView.h  loginView.h
